# P1

./: CMakeLists.txt  Datafil (Tid)  Datafil.txt  brugerdata.txt  datafil-ud.txt  datafil.txt  main.c  scan_nmrplade.c  scan_nmrplade.h  simulering_log.txt  test af nummerplader
src/: CMakeLists.txt  DataIndsamlingTing  main.c
src/Database/: Opendatabase.h  SimulateLedighed.c  SimulateLedighed.h  UpdateLedighed.c  UpdateLedighed.h  database.c
src/functions/: Simulation.c  Simulation.h  beregn_p_plads.c  beregn_p_plads.h  data.h  scan_nmrplade.c  scan_nmrplade.h  simulering.c  simulering.h
src/test/: test_functions.c  test_functions.h
